--- a/Dokumentacija/Faza2/SSU/SSU_tex/template.tex
+++ b/Dokumentacija/Faza2/SSU/SSU_tex/template.tex
@@ -39,7 +39,7 @@
 		\textbf{ \Large PROJEKAT ĐIRO\texttrademark} \\[0.3cm]
 		iz predmeta \\[0.3cm]
 		\textbf{ \Large Principi softverskog inženjerstva} \\[0.7cm]
-		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti ocenjivanja vozača } \\[6cm]
+		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti (...) } \\[6cm]
 		
 
 		\begin{minipage}{0.5\textwidth}
@@ -72,7 +72,7 @@
 
 \section{Uvod}
 \subsection{Rezime}
-Definisanje scenarija upotrebe pri ocenjivanju dilera, sa primerima odgovarajućih html stranica
+Definisanje scenarija upotrebe pri (...), sa primerima odgovarajućih html stranica
 \subsection{Namena dokumenta i ciljne grupe}
 Dokument će koristiti svi članovi projektnog tima u razvoju projekta i testiranju a može se koristiti i pri pisanju uputstva za
 upotrebu.
@@ -91,55 +91,30 @@ upotrebu.
 \hline
 Redni broj& Opis & Rešenje \\ 
 \hline
-1 & Koji spekti treba da se ocene? & \\ 
+1 &  & \\ 
 \hline
 \end{tabular}
 \end{center}
 
     
 
-\section{Scenario pri ocenjivanju vozača}
+\section{Scenario (...)}
 \subsection{Kratak opis}
-Nakon realizovanog iznajmljivanja vlasniku automobila(Đileru) se zahteva da brojčano i
-opisno oceni iskustvo. Podstiče se detaljnije opisivanje stanja u kojem je autombil
-vrácen. Ove ocene su prikazane na listingu odgovaraju ́ceg automobila kao i vozača.
 \subsection{Tok doga\dj aja}
 
-\subsubsection{Ocenjivanje vozača}
-\begin{enumerate}
-  \item Korisniku(Đileru) se prikazuje prozor za ocenjivanje.
-  \item Korisnik ocenjuje stanje automobila ocenom 1-5.
-  \item Korisnik ocenjuje vozača ocenom 1-5.
-  \item Korisnik opisno ocenjuje celo iskustvo.
-  \item Korisnik pritiska dugme "Završi ocenjivanje".
-\end{enumerate}
-
-\subsubsection{Neuspešno ocenjivanje vozača}
-\begin{enumerate}
-  \item Korisniku se prikazuje prozor za ocenjivanje.
-  \item Korisnik ne popunjava sva neophodna polja.
-  \item Korisnik šalje formu.
-  \item Korisnik se upozorava da ocenjivanje nije uspelo zbog toga što nedostaju obavezna polja.
-\end{enumerate}
-
-\subsubsection{Preskakanje ocenjivanja vozača}
-\begin{enumerate}
-  \item Korisniku se prikazuje prozor za ocenjivanje
-  \item Korisnik pritiska dugme "Preskoči ocenjivanje"
-\end{enumerate}
+\subsubsection{Nesto}
 
 \subsection{Posebni zahtevi}
 \subsection{Preduslovi}
-Realizovano iznajmljivanje
 \subsection{Posledice}
-Ažurira se ocena listinga i vozača
+
 \section{Istorija izmena}
 \begin{center}
 \begin{tabular}{ | m{2cm} | m{1.5cm}| m{6cm} | m{5cm} | } 
 \hline
 Datum & Verzija & Kratak opis & Autori \\ 
 \hline
- 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Stefan Branković\\ 
+ 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Aleksa Račić, Lazar Erić\\ 
 \hline
 &&&\\ 
 \hline
