--- a/Dokumentacija/Faza2/SSU/SSU_tex/SSU/SSU_ocenjivanje_dilera.tex
+++ b/Dokumentacija/Faza2/SSU/SSU_tex/SSU/SSU_ocenjivanje_dilera.tex
@@ -39,7 +39,7 @@
 		\textbf{ \Large PROJEKAT ĐIRO\texttrademark} \\[0.3cm]
 		iz predmeta \\[0.3cm]
 		\textbf{ \Large Principi softverskog inženjerstva} \\[0.7cm]
-		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti filtriranja pretrage } \\[6cm]
+		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti ocenjivanja đilera } \\[6cm]
 		
 
 		\begin{minipage}{0.5\textwidth}
@@ -72,7 +72,7 @@
 
 \section{Uvod}
 \subsection{Rezime}
-Definisanje scenarija upotrebe pri filtriranju pretrage, sa primerima odgovarajućih html stranica.
+Definisanje scenarija upotrebe pri ocenjivanju dilera, sa primerima odgovarajućih html stranica
 \subsection{Namena dokumenta i ciljne grupe}
 Dokument će koristiti svi članovi projektnog tima u razvoju projekta i testiranju a može se koristiti i pri pisanju uputstva za
 upotrebu.
@@ -91,47 +91,48 @@ upotrebu.
 \hline
 Redni broj& Opis & Rešenje \\ 
 \hline
-1 & Po kojim sve specifikacijama možemo filtrirati? & \\ 
-\hline
-2 & Dodavanje filtera za pretragu vozila najblizeg trenutnoj lokaciji? & \\ 
-\hline
-2 & Dodavanje država u kojima će korisnik voziti inajmljeni automobil? & \\
+1 & Koji spekti treba da se ocene? & \\ 
 \hline
 \end{tabular}
 \end{center}
 
     
 
-\section{Scenario filtriranja pretrage}
+\section{Scenario pri ocenjivanju đilera}
 \subsection{Kratak opis}
-Pretraga se dalje može filtrirati specificiranjem datuma, proizvodača, modela, tipa vozila (SUV, kabriolet, sedan...), broja mesta u vozilu itd.
-Takođe se može bliže odrediti mesto u čijoj okolini se traži automobil, kao i željeni raspon cena. 
-Mogu se dodati države po kojima će se voziti auto, u slučaju da je potreban zeleni karton ili specijalna dozvola.
+Nakon realizovanog iznajmljivanja korisniku se zahteva da brojčano i opisno oceni
+iskustvo. Podstiče se ocenjivanje verodostojnosti listinga, kao i problema automobila
+tokom vožnje. Ove ocene su prikazane na listingu odgovarajúceg automobila kao i
+Đilera.
+\subsection{Tok doga\dj aja}
 
-\subsection{Tok događaja}
-
-\subsubsection{Uspešan unos specifikacija za pretragu}
-
+\subsubsection{Ocenjivanje Đilera}
 \begin{enumerate}
-    \item Korisnik unosi proizvoljan broj specifikacija po kojima želi da filtrira rezultate.
-    \item Pritiska dugme za filtriranu pretragu.
-    \item Pojavljuje se prikaz svih filtriranih slobodnih automobila.
+  \item Korisniku se prikazuje prozor za ocenjivanje
+  \item Korisnik ocenjuje verodostojnost listinga ocenom 1-5
+  \item Korisnik ocenjuje automobil ocenom 1-5
+  \item Korisnik ocenjuje zajmodavca (Đilera) ocenom 1-5
+  \item Korisnik opisno ocenjuje celo iskustvo
+  \item Korisnik pritiska dugme "Završi ocenjivanje"
 \end{enumerate}
 
+\subsubsection{Preskakanje ocenjivanja Đilera}
+\begin{enumerate}
+  \item Korisniku se prikazuje prozor za ocenjivanje
+  \item Korisnik pritiska dugme "Preskoči ocenjivanje"
+\end{enumerate}
 \subsection{Posebni zahtevi}
-Za ovu funkcionalnost nema posebnih zahteva.
 \subsection{Preduslovi}
-Nema.
+Realizovano iznajmljivanje
 \subsection{Posledice}
-Korisnik ima pristup svim automobilima koji odgovaraju datim filterima.
-
+Ažurira se ocena listinga i zajmodavca (Đilera)
 \section{Istorija izmena}
 \begin{center}
 \begin{tabular}{ | m{2cm} | m{1.5cm}| m{6cm} | m{5cm} | } 
 \hline
 Datum & Verzija & Kratak opis & Autori \\ 
 \hline
- 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Lazar Erić\\ 
+ 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Stefan Branković\\ 
 \hline
 &&&\\ 
 \hline
