--- a/Dokumentacija/Faza2/SSU/SSU_tex/SSU/SSU_ocenjivanje_vozaca.tex
+++ b/Dokumentacija/Faza2/SSU/SSU_tex/SSU/SSU_ocenjivanje_vozaca.tex
@@ -39,7 +39,7 @@
 		\textbf{ \Large PROJEKAT ĐIRO\texttrademark} \\[0.3cm]
 		iz predmeta \\[0.3cm]
 		\textbf{ \Large Principi softverskog inženjerstva} \\[0.7cm]
-		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti uklanjanja listnga } \\[6cm]
+		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti ocenjivanja vozača } \\[6cm]
 		
 
 		\begin{minipage}{0.5\textwidth}
@@ -72,7 +72,7 @@
 
 \section{Uvod}
 \subsection{Rezime}
-Definisanje scenarija upotrebe pri uklanjanju listinga, sa primerima odgovarajućih html stranica.
+Definisanje scenarija upotrebe pri ocenjivanju dilera, sa primerima odgovarajućih html stranica
 \subsection{Namena dokumenta i ciljne grupe}
 Dokument će koristiti svi članovi projektnog tima u razvoju projekta i testiranju a može se koristiti i pri pisanju uputstva za
 upotrebu.
@@ -91,39 +91,46 @@ upotrebu.
 \hline
 Redni broj& Opis & Rešenje \\ 
 \hline
-1 &  & \\ 
+1 & Koji spekti treba da se ocene? & \\ 
 \hline
 \end{tabular}
 \end{center}
 
     
 
-\section{Scenario uklanjanja listinga}
+\section{Scenario pri ocenjivanju vozača}
 \subsection{Kratak opis}
-Điler u svakom trenutku ima mogu ́cnost uklanjanja vozila, samim tim i automatskog otkazivanja svih rezervacija.
-\subsection{Tok događaja}
+Nakon realizovanog iznajmljivanja vlasniku automobila(Đileru) se zahteva da brojčano i
+opisno oceni iskustvo. Podstiče se detaljnije opisivanje stanja u kojem je autombil
+vrácen. Ove ocene su prikazane na listingu odgovaraju ́ceg automobila kao i vozača.
+\subsection{Tok doga\dj aja}
 
-\subsubsection{Uklanjanje listinga}
+\subsubsection{Ocenjivanje vozača}
 \begin{enumerate}
-  \item Korisnik otvara prozor sa prikazom njegovih listinga.
-  \item Korisnik bira listing koji želi da ukloni.
-  \item Korisnik pritiska dugme "Ukloni".
-  \item Korisnik potvrđuje da želi da ukloni listing.
+  \item Vlasniku(Đileru) se prikazuje prozor za ocenjivanje
+  \item Vlasnik(Điler) ocenjuje stanje automobila ocenom 1-5
+  \item Vlasnik(Điler) ocenjuje vozača ocenom 1-5
+  \item Vlasnik(Điler) opisno ocenjuje celo iskustvo
+  \item Vlasnik(Điler) pritiska dugme "Završi ocenjivanje"
 \end{enumerate}
 
+\subsubsection{Preskakanje ocenjivanja vozača}
+\begin{enumerate}
+  \item Korisniku se prikazuje prozor za ocenjivanje
+  \item Korisnik pritiska dugme "Preskoči ocenjivanje"
+\end{enumerate}
 \subsection{Posebni zahtevi}
 \subsection{Preduslovi}
-Diler ima aktivan listing.
+Realizovano iznajmljivanje i korisnik se nalazi trenutno na prozoru rezervacije.
 \subsection{Posledice}
-Listing se uklanja iz ponude i sve rezervacije se otkazuju.
-
+Ažurira se ocena listinga i vozača
 \section{Istorija izmena}
 \begin{center}
 \begin{tabular}{ | m{2cm} | m{1.5cm}| m{6cm} | m{5cm} | } 
 \hline
 Datum & Verzija & Kratak opis & Autori \\ 
 \hline
- 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Aleksa Račić\\ 
+ 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Stefan Branković\\ 
 \hline
 &&&\\ 
 \hline
