--- a/Dokumentacija/Faza2/SSU/SSU_tex/SSU/SSU_pregled_zahteva_za_rezervaciju.tex
+++ b/Dokumentacija/Faza2/SSU/SSU_tex/SSU/SSU_pregled_zahteva_za_rezervaciju.tex
@@ -39,7 +39,7 @@
 		\textbf{ \Large PROJEKAT ĐIRO\texttrademark} \\[0.3cm]
 		iz predmeta \\[0.3cm]
 		\textbf{ \Large Principi softverskog inženjerstva} \\[0.7cm]
-		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti registracija } \\[6cm]
+		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti pregleda zahteva za rezervciju } \\[5cm]
 		
 
 		\begin{minipage}{0.5\textwidth}
@@ -48,7 +48,7 @@
 				\emph{Tim} SLAV Co. \\
 			     $\;\;\; \cdot \;\;$Stefan Branković  0253/2019\\
 			     $\;\;\; \cdot \;\;$Lazar Erić 0235/2019\\
-			     $\;\;\; \cdot \;\;$Aleksa Račić 728/2019\\
+			     $\;\;\; \cdot \;\;$Aleksa Račić 0728/2019\\
 			     $\;\;\; \cdot \;\;$Vasilevska Nevena 0418/2019
 			\end{flushleft}
 		\end{minipage}
@@ -72,7 +72,7 @@
 
 \section{Uvod}
 \subsection{Rezime}
-Definisanje scenarija upotrebe pri registarciji, sa primerima odgovarajućih html stranica.
+Definisanje scenarija upotrebe pri pregledu zahteva za registraciju, sa primerima odgovarajućih html stranica
 \subsection{Namena dokumenta i ciljne grupe}
 Dokument će koristiti svi članovi projektnog tima u razvoju projekta i testiranju a može se koristiti i pri pisanju uputstva za
 upotrebu.
@@ -91,49 +91,38 @@ upotrebu.
 \hline
 Redni broj& Opis & Rešenje \\ 
 \hline
-1 & Koja sva polja možemo dodati u toku same rezervacije? & \\
-\hline
-2 & Verifikovanje vozačke i saobraćajne se radi u drugim funkcionalnostima? & \\
+1 & Na koji način prikazati Đileru zahtev za rezervaciju? & \\ 
 \hline
 \end{tabular}
 \end{center}
 
     
 
-\section{Scenario registarcija}
+\section{Scenario pregleda zahteva za rezervaciju}
 \subsection{Kratak opis}
-Ukoliko korisnik ne poseduje svoj nalog, može ga kreirati unošenjem
-podataka, kao što su ime, prezime, email adresa, broj telefona i drugi podaci. I posle toga nalog se potvrđuje verifikacijom mejl adrese.
-\subsection{Tok događaja}
+Kada vozač zatraži rezervaciju automobila, zahtev se dostavlja Đileru sa informa-
+cijama o vozaču, datumima i mestu preuzimanja. Dileri mogu da prihvate ili odbiju
+zahtev.
+\subsection{Tok doga\dj aja}
 
-\subsubsection{Uspešna registarcija, validna sva popunjena polja}
-
+\subsubsection{Zajmodavac(Điler) odobrava rezervaciju}
 \begin{enumerate}
-   \item Korisnik unosi svoje lične podatke u delovima predodređenim za to.
-   \item Korisnik unosi svoje šifru i potvrdjuje je.
-   \item Korisnik prihvata uslove korišćenja i pritiska dugme za verifikovanje email adrese.
-   \item Odlazi u svoje email sanduče i pritiska dugme u dobijem mailu, čime verifikuje svoj nalog.
-   \item Vraća se na login formu.
+   \item Zajmodavac(Điler) otvara poruku koja obaveštava da ma novu rezervaciju
+   \item Zajmodavac(Điler) otvara poruku sa informacijama o rezervaciji
+   \item Zajmodavac(Điler) odobrava rezervaciju klikom na dugme "Odobri"
  \end{enumerate}
- 
-\subsubsection{Neuspesna registarcija, postoje nevalidno popunjena polja}
+ \subsubsection{Zajmodavac(Điler) odbija rezervaciju}
 \begin{enumerate}
-   \item Korisnik unosi svoje lične podatke u delovima predodređenim za to.
-   \item Korisnik unosi svoje šifru i potvrdjuje je.
-   \item Korisnik prihvata uslove korišćenja i pritiska dugme za verifikovanje email adrese.
-   \begin{enumerate}
-   \item Odlazi u svoje email sanduče i ne postoji mail za verifikovanje jer je uneo pogresnu email adresu.
-   \item Korisnik ne pritiska dugme za verifikaciju u mail-u koji je dobio i samim tim ne verifikuje nalog.
-   \end{enumerate}
-   \item Vraćanjem na Điro, korisnik ne može da se uloguje.
+   \item Zajmodavac(Điler) otvara poruku koja obaveštava da ma novu rezervaciju
+   \item Zajmodavac(Điler) otvara poruku sa informacijama o rezervaciji
+   \item Zajmodavac(Điler) odobrava rezervaciju klikom na dugme "Poništi"
  \end{enumerate}
 
 \subsection{Posebni zahtevi}
-Nema ih.
 \subsection{Preduslovi}
-Da korisnik ima važeću email adresu.
+Treba da postoji zahtev za rezervaciju
 \subsection{Posledice}
-Korisnik kreira nalog na Điro-u.
+Rezervacija je ili odobrena ili poništena. Vozač dobija informaciju o ishodu.
 
 \section{Istorija izmena}
 \begin{center}
@@ -141,7 +130,7 @@ Korisnik kreira nalog na Điro-u.
 \hline
 Datum & Verzija & Kratak opis & Autori \\ 
 \hline
- 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Lazar Erić\\ 
+ 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Stefan Branković\\ 
 \hline
 &&&\\ 
 \hline
