--- a/Dokumentacija/Faza2/SSU/SSU_tex/SSU/SSU_verifikovanje_vozacke.tex
+++ b/Dokumentacija/Faza2/SSU/SSU_tex/SSU/SSU_verifikovanje_vozacke.tex
@@ -26,20 +26,22 @@
 \usepackage{tabularx}
 \usepackage{textcomp}
 \graphicspath{ {./images/} }
+
+
 % References
 % https://www.overleaf.com/learn/latex/Bibliography_management_in_LaTeX
 % https://en.wikibooks.org/wiki/LaTeX/Bibliography_Management
 
 \begin{document}
-    \selectlanguage{serbian}
     \renewcommand{\labelenumii}{\arabic{enumi}.\arabic{enumii}}
+    \selectlanguage{serbian}
 	\begin{titlepage}  
 		\center
 		\textbf{ \LARGE ELEKTROTEHNIČKI FAKULTET, UNIVERZITET U BEOGRADU } \\[4cm]
 		\textbf{ \Large PROJEKAT ĐIRO\texttrademark} \\[0.3cm]
 		iz predmeta \\[0.3cm]
 		\textbf{ \Large Principi softverskog inženjerstva} \\[0.7cm]
-		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti izmene listinga } \\[6cm]
+		{ \huge \bfseries Specifikacija scenarija upotrebe funkcionalnosti verifikovanja vozačke dozvole } \\[5.5cm]
 		
 
 		\begin{minipage}{0.5\textwidth}
@@ -72,7 +74,7 @@
 
 \section{Uvod}
 \subsection{Rezime}
-Definisanje scenarija upotrebe pri izmeni listinga, sa primerima odgovarajućih html stranica.
+Definisanje scenarija upotrebe pri verifikovanju vozačke dozvole, sa primerima odgovarajućih html stranica
 \subsection{Namena dokumenta i ciljne grupe}
 Dokument će koristiti svi članovi projektnog tima u razvoju projekta i testiranju a može se koristiti i pri pisanju uputstva za
 upotrebu.
@@ -91,57 +93,66 @@ upotrebu.
 \hline
 Redni broj& Opis & Rešenje \\ 
 \hline
-1 & Za koje informacije o vozilu treba dozvoliti izmene? & \\
-\hline
-2 & Za koje informacije treba ograničiti izmene kada za dato vozilo postoji rezervacija? & \\
+1 & Na koji način je najbolje verifikovati vozačku dozvolu & \\ 
 \hline
 \end{tabular}
 \end{center}
 
     
 
-\section{Scenario izmene listinga}
+\section{Scenario pri verifikovanju vozačke dozvole}
 \subsection{Kratak opis}
-Treba da omogući dodavanje novih ili izmenu postojećcih informacija na listingu.
-Korisnici sa rezervacijom za izmenjeni automobil treba da budu obavešteni o izmeni.
-Informacije koje se ne mogu izmeniti su informacije koje se odnose na proizvodača,
-model, godište automobila i slične.
-\subsection{Tok događaja}
-
-\subsubsection{Uspešna izmena listinga}
+Pre zahtevanja rezervacije potrebno je da korisnik dostavi svoju sliku i sliku svoje
+vozacke dozvole zbog verifikacije identiteta i vozačke sposobnosti.
+\subsection{Tok doga\dj aja}
+\subsubsection{Korisnik uspešno verifikuje vozačku dozvolu}
 \begin{enumerate}
-    \item Korisnik unosi dodatne ili menja postojeće informacije o vozilu, model, proizvodjača, godina proizvodnje itd.
-    \item Kada korisnik završi izmene potrebno je da ih sačuva.
-    \item Ako su mu dozvoljene sve promene, vraća se na početnu stranu.
-    \item Klijenti koji imaju rezervacije izmenjenog vozila dobijaju informacije o promenama.
+  \item Korisnik pritiska dugme "Verifikuj vozačku dozvolu"
+  \item Korisnik se slika preko web kamere
+  \begin{enumerate}
+     \item Korisnik pristaje da se uključi web kamera
+     \item Korisniku se prikazuje snimak sa web kamere
+     \item KOrisnik pritiska dugme "Uslikaj"
+  \end{enumerate}
+  \item Korisnik šalje sliku vozačke dozvole
+  \begin{enumerate}
+     \item Korisnik pritiska dugme "Učitaj sliku"
+     \item Korisniku se otvara prozor gde bira sliku sa računara
+  \end{enumerate}
+  \item Korisnik pritiska dugme "Pošalji na verifikaciju"
+  \item Korisnik dobija poruku da je verifikacija uspešna
 \end{enumerate}
-
-\subsubsection{Neuspešna izmena na listinga}
+\subsubsection{Korisnik neuspešno verifikuje vozačku dozvolu}
 \begin{enumerate}
-    \item Korisnik unosi dodatne ili menja postojeće informacije o vozilu, model, proizvodjača, godina proizvodnje itd.
-    \item Kada korisnik završi izmene potrebno je da ih sačuva.
-    \item Pošto ima promene koje nisu dozvoljene 
-	\begin{enumerate}
-		\item izmene informacija koje nije dozvoljeno menjati tokom postojećih rezervacija 
-		\item izmene podataka koji ne smeju da se menjaju(model, godište itd.).
-	\end{enumerate}
-    \item Korisnik dobija informaciju da ne sme da menja informaciju i vraća se na tačku 1.
+  \item Korisnik pritiska dugme "Verifikuj vozačku dozvolu"
+  \item Korisnik se slika preko web kamere
+  \begin{enumerate}
+     \item Korisnik pristaje da se uključi web kamera
+     \item Korisniku se prikazuje snimak sa web kamere
+     \item KOrisnik pritiska dugme "Uslikaj"
+  \end{enumerate}
+  \item Korisnik šalje sliku vozačke dozvole
+  \begin{enumerate}
+     \item Korisnik pritiska dugme "Učitaj sliku"
+     \item Korisniku se otvara prozor gde bira sliku sa računara
+  \end{enumerate}
+  \item Korisnik pritiska dugme "Pošalji na verifikaciju"
+  \item Korisnik dobija poruku sa obrazloženjem zašto verifikacija nije uspela
 \end{enumerate}
 
 \subsection{Posebni zahtevi}
-Nema ih.
+Slika vozačke dozvole i slika korisnika
 \subsection{Preduslovi}
-Nema ih.
+Korisnik je registrovan
 \subsection{Posledice}
-Izmene na oglasu koje je korisnik postavio i obaštenje o tome klijentima koji su imali rezervacije.
-
+Korisnikova vozačka dozvola je verifikovana
 \section{Istorija izmena}
 \begin{center}
 \begin{tabular}{ | m{2cm} | m{1.5cm}| m{6cm} | m{5cm} | } 
 \hline
 Datum & Verzija & Kratak opis & Autori \\ 
 \hline
- 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Nevena Vasilevska\\ 
+ 21.03.2022. & 1.0 & Napravljen inicijalni dokument & Aleksa Račić\\ 
 \hline
 &&&\\ 
 \hline
